client/src/components/footer/Footer.css
.footer-container {
  position: absolute;
  bottom: 0;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  line-height: 2;
  gap: 1.25rem;
  padding-bottom: 0.75rem;

  hr {
    width: 100%;
    margin: 0;
  }

  ul {
    list-style-type: none;
    display: flex;
    justify-content: center;
    gap: 3rem;
    padding: 0;
    margin: 0;
  }
}

